# knect

./: deploy.sh
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml
backend/.sqlx/: query-0121da2c81756c20430ba1e1b60f30fb703777a4b8ba18bb1c0d4579fa31e1b6.json  query-0488d7333d670c867bd7a338a5250654529e12391585ef1c0cd3c2d45458a167.json  query-08de6b715fcdb566d9f0756794a83dba9203b693474fe42914cc05e0182b3766.json  query-1504e481137583316752dc3892dc448e322b3e5300d41c82e7dab949d9762d96.json  query-157f7e9f584ba3ffe434119b4310b9eb89bc0dcb0162487ac4bbfe9cdbb47632.json  query-17790ea70e96dea8e01734fa8989238d0193961858f597d85cac4e4ee306b2e5.json  query-18bd0eb8aec157f7f2e69736b35ed33da0845c4eb4ed9b442eb13dbd585d891a.json  query-20ba2fbf9d7b55b636383feede2fb591f4e4b43a0cbc83cf54468d71fa5989a5.json  query-241c894447d32099fcd2de4e6e879cea98a8e5f3ff7123ebf95e949bcd32de25.json  query-256411e01d922a9b587cc22c43b4550a02fb7469955b79468ec333fcf817c4a9.json  query-27c0c55f1d42d845d4dffd5955229880341545d369b675e6b27975eac5b53531.json  query-27d43bc37f106785b56c17571e572f7a732ca427720bea635da5a2684cbfa54f.json  query-2e9057dcfaafd6f7b1faa2d2c1e4b70f7b27d8cac687e153ed5f58e570d8eb0a.json  query-34caa167110edd6f85d4529c56a911502e64550f6c095a396fe431b26283ac84.json  query-35d5d5ed2a46957b04be1c33afc7b75a3ad3e3932151c4cc7926ee16777dea9c.json  query-371104d16704d91a6a1fc78f7966e31f5445a83983e0880bc21a3e8ac834f62f.json  query-3ac2af733f403af1051d87048419c167389f913c05a0136d10f11cb274ddefa6.json  (+45 more)
backend/src/: config.rs  error.rs  (+2 more)
(+266 files in other folders)
